--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation 'de.hdodenhof:circleimageview:3.1.0' //circular image view
+    implementation "ai.bongotech:bongobt:1.0.3"
 }
