--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE"/>
     <uses-permission
         android:name="android.permission.BLUETOOTH_SCAN"
         android:usesPermissionFlags="neverForLocation" />
@@ -42,6 +45,14 @@
         </activity>
         <receiver
             android:name=".helper.AlarmHelper"
-            android:exported="false" />    </application>
+            android:exported="false" />
+
+        <service android:name=".helper.ForegroundService" android:foregroundServiceType="connectedDevice"
+            android:exported="false"/>
+        <activity
+            android:name="ai.bongotech.bt.PermissionBridgeActivity"
+            android:exported="false" />
+
+    </application>
 
 </manifest>
